member menu changes + slight shift issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -322,9 +322,9 @@ div:has(> .mailSendToaster) {
 }
 
 .member-images.subheader-images .member-photo {
-    min-width: 16px;
-    width: 16px;
-    height: 16px;
+    min-width: 18px;
+    width: 18px;
+    height: 18px;
     display: flex;
     align-items: center;
     font-size: 9px;
